--- a/spring-cloud-config-server/src/main/resources/application.yml
+++ b/spring-cloud-config-server/src/main/resources/application.yml
@@ -1,5 +1,10 @@
 spring:
   application:
     name: spring-cloud-config-server
+  cloud:
+    config:
+      server:
+        git:
+          uri: C:\\projects\\git-localconfig-repo
 server:
   port: 8888
