--- a/limits-service/src/main/resources/application.yml
+++ b/limits-service/src/main/resources/application.yml
@@ -3,8 +3,7 @@ spring:
         name: limits-service
     config:
         import: optional:configserver:http://localhost:8888
+    profiles:
+        active: dev
 server:
     port: 8080
-limits-service:
-    max: 999
-    min: 1
