--- a/currency-exchange-service/src/main/resources/application.yml
+++ b/currency-exchange-service/src/main/resources/application.yml
@@ -5,5 +5,13 @@ spring:
     import: optional:configserver:http://localhost:8888
   profiles:
     active: dev
+  datasource:
+    url: jdbc:h2:mem:db
+  h2:
+    console:
+      enabled: true
+  jpa:
+    show-sql: true
+    defer-datasource-initialization: true
 server:
   port: 8100
