--- a/currency-conversion-service/src/main/resources/application.yml
+++ b/currency-conversion-service/src/main/resources/application.yml
@@ -1,8 +1,13 @@
 spring:
   application:
-    name: currency-exchange-service
+    name: currency-conversion-service
   config:
     import: optional:configserver:http://localhost:8888
   profiles:
     active: dev
-server.port: 8200
+server:
+  port: 8200
+eureka:
+  client:
+    service-url:
+      default-zone: http://localhost:8761/eureka
