--- a/currency-exchange-service/src/main/resources/application.yml
+++ b/currency-exchange-service/src/main/resources/application.yml
@@ -15,3 +15,7 @@ spring:
     defer-datasource-initialization: true
 server:
   port: 8100
+eureka:
+  client:
+    service-url:
+      default-zone: http://localhost:8761/eureka
