--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -11,6 +11,9 @@ spring:
         locator:
           enabled: true
           lower-case-service-id: true
+  sleuth:
+    sampler:
+      probability: 1.0
 server:
   port: 8765
 eureka:
