--- a/currency-conversion-service/src/main/resources/application.yml
+++ b/currency-conversion-service/src/main/resources/application.yml
@@ -13,6 +13,9 @@ spring:
         locator:
           enabled: true
           lower-case-service-id: true
+  sleuth:
+    sampler:
+      probability: 1.0
 server:
   port: 8200
 eureka:
